# dcc062-sistemas-operacionais

./: .editorconfig  CMakeLists.txt  README.md
src/: lottery.c  sched.h
tp-1/: .CMakeLists.txt.swp  CMakeLists.txt
tp-1/src/: sched.c
tp-2/: CMakeLists.txt  README.md
tp-2/src/: main.c  myfs.c  myfs.h  vfs.c
tp1/: CMakeLists.txt
tp1/src/: main.c  process.c
tp2/: CMakeLists.txt  README.md
tp2/src/: myfs.c
